# Simple-game-engine

./: .gitignore  CMakeLists.txt  README.md
Engine/Dependencies/glad/: glad.h
Engine/include/: Config.hpp  MainMenu.hpp
Engine/src/: Main.cpp  MainMenu.cpp  glad.c
include/: Config.hpp  ErrorHandling.hpp
src/: Main.cpp
src/shaders/: fragment.txt  vertex.txt
